--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
     <div id="authContainer" class="auth-container">
         <form id="loginForm" class="">
-            <h2 class="auth-title">User Login</h2>
+            <h2 class="auth-title">Welcome Back</h2>
             <div class="mb-4"><label for="loginEmail" class="label">Email</label><input type="email" id="loginEmail" class="input" required placeholder="your@email.com"></div>
             <div class="mb-6"><label for="loginPassword" class="label">Password</label><input type="password" id="loginPassword" class="input" required placeholder="••••••••"></div>
             <p id="loginError" class="error-message hidden"></p>
@@ -345,7 +345,7 @@
 
 
         const ELEVENLABS_API_BASE_URL = 'https://api.elevenlabs.io/v1';
-        const DEFAULT_ELEVENLABS_API_KEY = "sk_4b326f6a8f8712a54f02b3b990fe3fbf8e63f008c727298b"; 
+        const DEFAULT_ELEVENLABS_API_KEY = "sk_cdbe7b047ea29d64980b028b88cba4145b2ee5a0ada6283f"; 
         const ADMIN_PASSWORD = "Monopoly1.@"; 
         let currentAudioBlobUrl = null; 
         let allVoices = []; 
