--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             For more details
         </a>
 
-        <p class="footer-text">&copy; <span id="currentYear"></span> Your Company Name. All rights reserved.</p>
+        <p class="footer-text">&copy; <span id="currentYear"></span>  All rights reserved.</p>
     </div>
 
     <script>
