--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        /* CSS for Account Unavailable Banner */
+.account-status-banner {
+  background-color: #dc3545; /* Red color - aap apni pasand ka red shade bhi use kar sakte hain */
+  color: white;             /* Text color - safed */
+  text-align: center;       /* Text ko center mein rakhega */
+  padding: 12px 15px;       /* Upar-neeche aur side se thori si jagah */
+  font-weight: bold;        /* Text ko thora mota dikhayega */
+  font-size: 1rem;          /* Text ka size (aap adjust kar sakte hain) */
+  width: 100%;              /* Poori width cover karega */
+  
+  /* Agar aap chahte hain ke yeh banner scroll karne par bhi upar chipka rahe (sticky): */
+  /* position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; */ /* z-index taake yeh doosre elements ke upar aaye */
+}
         body {
             font-family: 'Inter', sans-serif;
             background-color: #111827; /* Dark gray background */
@@ -116,6 +132,9 @@
         </div>
 
         <div id="loginPage" class="auth-card p-8 rounded-lg shadow-lg max-w-md mx-auto">
+            <div class="account-status-banner">
+              Accounts are currently unavailable.
+            </div>
             <h2 class="text-3xl font-bold text-center mb-8 text-transparent bg-clip-text bg-gradient-to-r from-blue-400 to-purple-500">Welcome Back!</h2>
             <form id="loginForm">
                 <div class="mb-6">
